--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header>
         <h1>Dailypot</h1>
         <p>One-minute comments</p>
+        <div class="search-bar">
+             <!-- <input type="text" id="search" placeholder="Search comments..."> -->
+             <span class="magnifier-icon">🥣</span>
+        </div>
     </header>
     <main id="comment-container">
         <!-- Utterances input box -->
