--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 <body>
     <header>
         <h1>Dailypot</h1>
-        <p>One-minute comments</p>
-        <div class="search-bar">
-             <!-- <input type="text" id="search" placeholder="Search comments..."> -->
-            <p>~</p> 
-            <span class="magnifier-icon">🥣</span>
-        </div>
+        <p>Hello World!</p>
     </header>
     <main id="comment-container">
         <!-- Utterances input box -->
