--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
         <h1>Dailypot</h1>
         <p>Hello World!</p>
+        <div class="search-bar">
+            <!-- <input type="text" id="search" placeholder="Search comments...">
+            <span class="magnifier-icon">🔍</span> -->
+             <p> </p>
+        </div>
     </header>
     <main id="comment-container">
         <!-- Utterances input box -->
